--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <header>
+        <a href="#"><span>WEB</span>STUDIO</a>
         <nav>
-            <h2>WEBSTUDIO</h2>
             <ul>
                 <li>
                     <a href="#">Studio</a>
@@ -25,61 +25,98 @@
             </ul>
         </nav>
 
-        <p>info@devstudio.com</p>
-        <p>+11 (000) 111-11-11</p>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
 
-        <main>
+    </header>
+
+
+    <main>
+        <section>
+
             <h1>Effective solutions for your business</h1>
-            <button>Order Service</button>
-
-            <ul>
+            <button type="button">Order Service</button>
+        </section>
+        <section>
+            <ul></ul>
+            <article>
                 <li>
-                    <h2>Strategy</h2>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
+            </article>
+            <article>
                 <li>
                     <h2>Punctuality</h2>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
+            </article>
+            <article>
                 <li>
                     <h2>Diligence</h2>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize
+                        risk.
                     </p>
                 </li>
+            </article>
+            <article>
                 <li>
                     <h2>Technologies</h2>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
-            </ul>
-
-
+            </article>
+        </section>
+        <section>
             <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <article>
+                        <img src="img.jpg" alt="Mark Guerrero" width="264" height="380">
+                        <div>
+                            <h3>Mark Guerrero</h3>
+                            <p>Product Designer</p>
+                        </div>
+                </li>
+                </article>
+                <article>
+                    <li>
+                        <img src="img2.jpg" alt="Tom Ford" width="264" height="380">
+                        <div>
+                            <h3>Tom Ford</h3>
+                            <p>Frontend Developer</p>
+                        </div>
+                    </li>
+                </article>
+                <article>
+                    <li>
+                        <img src="img3.jpg" alt="Camila Garcia" width="264" height="380">
+                        <div>
+                            <h3>Camalia Garcia</h3>
+                            <p>Marketing</p>
+                        </div>
+                    </li>
+                </article>
+                <article>
+                    <li>
+                        <img src="img4.jpg" alt="Daniel Wilson" width="264" height="380">
+                        <div>
+                            <h3>Daniel Wilson</h3>
+                            <p>UI Designer</p>
+                        </div>
+                    </li>
+                </article>
+            </ul>
+        </section>
+    </main>
 
-            <img src="img.jpg" alt="Mark Guerrero Product Designer" width="264" height="380">
-
-            <br><br>
-
-            <img src="img2.jpg" alt="Tom Ford Frontend Developer" width="264" height="380">
-            <br><br>
-
-            <img src="img3.jpg" alt="Camila Garcia Marketing" width="264" height="380">
-
-            <br><br>
-
-            <img src="img4.jpg" alt="Daniel Wilson UI Designer" width="264" height="380">
-        </main>
-
-        <footer>
-            <h2>WEBSTUDIO</h2>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </footer>
-
-
-
-    </header>
+    <footer>
+        <h2><span>WEB</span>STUDIO</h2>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
 </body>
 
 </html>
