--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
 <body>
 
     <header>
-        <a href="#"><span>WEB</span>STUDIO</a>
+        <a href="webstudio.index/html">WEBSTUDIO</a>
+
         <nav>
             <ul>
-                <li>
-                    <a href="#">Studio</a>
-                </li>
-                <li>
-                    <a href="#">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#">Contacts</a>
-                </li>
+                <li><a href="#">Studio</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
 
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
 
     </header>
 
@@ -38,36 +37,37 @@
             <button type="button">Order Service</button>
         </section>
         <section>
-            <ul></ul>
-            <article>
+            <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
+                    <article>
+                        <h3>Strategy</h3>
+                        <p>Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.</p>
+                    </article>
                 </li>
-            </article>
-            <article>
                 <li>
-                    <h2>Punctuality</h2>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.</p>
+                    <article>
+                        <h3>Punctuality</h3>
+                        <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                            time.</p>
+                    </article>
                 </li>
-            </article>
-            <article>
                 <li>
-                    <h2>Diligence</h2>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize
-                        risk.
-                    </p>
+                    <article>
+                        <h3>Diligence</h3>
+                        <p>Research and confirm brands with the strongest digital growth opportunities and minimize
+                            risk.
+                        </p>
+                    </article>
                 </li>
-            </article>
-            <article>
                 <li>
-                    <h2>Technologies</h2>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.</p>
+                    <article>
+                        <h3>Technologies</h3>
+                        <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                            problem-solving.</p>
+                    </article>
                 </li>
-            </article>
+            </ul>
         </section>
         <section>
             <h2>Our Team</h2>
@@ -79,41 +79,41 @@
                             <h3>Mark Guerrero</h3>
                             <p>Product Designer</p>
                         </div>
+                    </article>
                 </li>
-                </article>
-                <article>
-                    <li>
+                <li>
+                    <article>
                         <img src="img2.jpg" alt="Tom Ford" width="264" height="380">
                         <div>
                             <h3>Tom Ford</h3>
                             <p>Frontend Developer</p>
                         </div>
-                    </li>
-                </article>
-                <article>
-                    <li>
+                    </article>
+                </li>
+                <li>
+                    <article>
                         <img src="img3.jpg" alt="Camila Garcia" width="264" height="380">
                         <div>
                             <h3>Camalia Garcia</h3>
                             <p>Marketing</p>
                         </div>
-                    </li>
-                </article>
-                <article>
-                    <li>
+                    </article>
+                </li>
+                <li>
+                    <article>
                         <img src="img4.jpg" alt="Daniel Wilson" width="264" height="380">
                         <div>
                             <h3>Daniel Wilson</h3>
                             <p>UI Designer</p>
                         </div>
-                    </li>
-                </article>
+                    </article>
+                </li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <h2><span>WEB</span>STUDIO</h2>
+        <a href="webstudio.index/html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
