--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <header>
-        <a href="webstudio.index/html">WEBSTUDIO</a>
 
         <nav>
+            <a href="webstudio./index.html">WebStudio</a>
             <ul>
                 <li><a href="#">Studio</a></li>
                 <li><a href="#">Portfolio</a></li>
@@ -33,39 +33,33 @@
     <main>
         <section>
 
-            <h1>Effective solutions for your business</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
+
         <section>
+            <h2>Features</h2>
             <ul>
                 <li>
-                    <article>
-                        <h3>Strategy</h3>
-                        <p>Our goal is to identify the business
-                            problem to walk away with the perfect and creative solution.</p>
-                    </article>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <article>
-                        <h3>Punctuality</h3>
-                        <p>Bring the key message to the brand's audience for the best price within the shortest possible
-                            time.</p>
-                    </article>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
                 </li>
                 <li>
-                    <article>
-                        <h3>Diligence</h3>
-                        <p>Research and confirm brands with the strongest digital growth opportunities and minimize
-                            risk.
-                        </p>
-                    </article>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize
+                        risk.
+                    </p>
                 </li>
                 <li>
-                    <article>
-                        <h3>Technologies</h3>
-                        <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                            problem-solving.</p>
-                    </article>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -73,47 +67,31 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <article>
-                        <img src="img.jpg" alt="Mark Guerrero" width="264" height="380">
-                        <div>
-                            <h3>Mark Guerrero</h3>
-                            <p>Product Designer</p>
-                        </div>
-                    </article>
+                    <img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="380">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <article>
-                        <img src="img2.jpg" alt="Tom Ford" width="264" height="380">
-                        <div>
-                            <h3>Tom Ford</h3>
-                            <p>Frontend Developer</p>
-                        </div>
-                    </article>
+                    <img src="./images/img2.jpg" alt="Tom Ford" width="264" height="380">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <article>
-                        <img src="img3.jpg" alt="Camila Garcia" width="264" height="380">
-                        <div>
-                            <h3>Camalia Garcia</h3>
-                            <p>Marketing</p>
-                        </div>
-                    </article>
+                    <img src="./images/img3.jpg" alt="Camila Garcia" width="264" height="380">
+                    <h3>Camalia Garcia</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <article>
-                        <img src="img4.jpg" alt="Daniel Wilson" width="264" height="380">
-                        <div>
-                            <h3>Daniel Wilson</h3>
-                            <p>UI Designer</p>
-                        </div>
-                    </article>
+                    <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" height="380">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <a href="webstudio.index/html">WEBSTUDIO</a>
+        <a href="webstudio./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
