--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
 
         <nav>
-            <a href="webstudio./index.html">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="#">Studio</a></li>
                 <li><a href="#">Portfolio</a></li>
@@ -78,7 +78,7 @@
                 </li>
                 <li>
                     <img src="./images/img3.jpg" alt="Camila Garcia" width="264" height="380">
-                    <h3>Camalia Garcia</h3>
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-        <a href="webstudio./index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
